# Morse-Code-App

./: ..bundle.js  ..virtual-entry.js  .eslintrc.json  README.md  app.config.ts  app.json  babel.config.js  build-failure-log-nocc.txt  build-failure-log.txt  build-success-log.txt  eslint.config.js  gradle-build-log.txt  hermes-configure-log.txt  hermes-configure-log2.txt  hermes-configure-log3.txt  latest-logcat-play-pattern.txt  latest-logcat.txt  nitro.json  package-lock.json  package.json  temp-build.cmd
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/nitro/: cpp-adapter.cpp
app/: +not-found.tsx  _layout.tsx
app/(tabs)/: _layout.tsx  index.tsx  lessons.tsx  practice.tsx  settings.tsx
app/components/: ChallengeNode.tsx  LessonNode.tsx
app/dev/: index.tsx
app/practice/: keyer.tsx
app/settings/: _layout.tsx  output.tsx
components/: AnimatedIcons.tsx  ChallengeNode.tsx  Coin.tsx  FixedControlsLayout.tsx  HeaderGroupPicker.tsx  HeaderMenu.tsx  LessonCard.tsx  LessonNode.tsx  LessonPath.tsx  LessonPromptCard.tsx  MorseKeyboard.tsx  MorseViz.tsx  NeonHeaderCard.tsx  PillLessonNode.tsx  PlayButton.tsx  ProgressBar.tsx  ProgressRings.tsx
components/icons/: AntennaWithWifi.tsx  DishWithWifi.tsx  WifiOverlay.tsx
components/lessons/: Coin.tsx  HeaderCounters.tsx  LessonNode.tsx  LessonPath.tsx  LessonPromptCard.tsx  NeonHeaderCard.tsx
components/session/: ActionButton.tsx  ChallengeKeyboard.tsx  FlashOverlay.tsx  FlashOverlayHost.tsx  KeyerButton.tsx  LessonChoices.tsx  MorseCompare.tsx  OutputToggle.tsx  OutputTogglesRow.tsx  ProgressBar.tsx  PromptCard.tsx  RevealBar.tsx  SessionHeader.tsx  SessionSummary.tsx  TorchDiagnosticsNotice.tsx
constants/: appConfig.ts  coinTheme.ts  colors.ts  lessons.ts  theme.ts
constants/locales/: de.json  en.json  es.json  fr.json
data/: lessons.ts
docs/: android-dev-client-testing.md  codex-handoff.md  developer-console-updates.md  freeform-send-regression.md  latency-instrumentation-blueprint.md  lessons-structure-plan.md  living-spec.md  multilanguage-plan.md  nitro-integration-prep.md  outputs-alignment-notes.md  outputs-investigation.md  outputs-log-monitoring.md  outputs-rewire-plan.md  practice-revamp-plan.md  refactor-notes.md
docs/Archive/: outputs-log-monitoring.md  outputs-rewire-plan.md
docs/logs/: console-replay-20251010-aligned.md  console-replay-20251010-aligned.txt  console-replay-20251011-121646-play-pattern.txt  console-replay-20251011-133707-play-pattern.txt  console-replay-20251011-141417-play-pattern.txt  console-replay-20251011-144151-play-pattern.txt  console-replay-20251011-144639-play-pattern.txt  console-replay-20251011-145909-play-pattern.txt  console-replay-20251011-150200-play-pattern.txt  console-replay-20251011-152657-play-pattern.txt  console-replay-20251011-154840-play-pattern.txt  console-replay-20251011-161229-play-pattern.txt  console-replay-20251011-162210-play-pattern.txt  console-replay-20251011-163246-play-pattern.txt  console-replay-20251011-165958-play-pattern.txt  console-replay-20251011-171837-play-pattern.txt  console-replay-20251011-173500-play-pattern.txt  console-replay-20251011-175743-play-pattern.txt  (+118 more)
hooks/: sessionActionTypes.ts  useAnswerCutoff.ts  useHaptics.ts  useKeyerOutputs.ts  useReceiveSession.ts  useSendSession.ts  useSessionFlow.ts
i18n/: index.ts
lib/: audio.ts  buildSectionPath.ts  i18n.ts  morse.ts
outputs-native/: audio.nitro.ts
patches/: react-native+0.81.4.patch
plugins/: withAudioApiAndroidConfig.js  withNitroCodegen.js  withNitroCodegen.ts
scripts/: analyze-logcat.ps1  check-handoff-updated.js  check-session-control-theme.js  check-session-style-guard.js  run-send-regression.js  send-regression-controller.js  temp-logcat-capture.ps1
session/: sessionMeta.ts
store/: lessonStore.ts  settingsStore.ts  useDeveloperStore.ts  useOutputsDiagnosticsStore.ts  useOutputsLatencyStore.ts  useProgressStore.ts  useSettingsStore.ts
temp/: logcat-session.json
theme/: coinTheme.ts  lessonTheme.ts  sessionStyles.ts  theme.ts  tokens.ts
types/: expo-audio.d.ts  index.ts  progress.ts  session.ts
utils/: audio.ts  morse.ts  morseTiming.ts  morseUtils.ts  nativeTorch.ts  scheduling.ts  time.ts  torch.ts
(+60 files in other folders)
